# TBK_Firmware

./: CMakeCache.txt  CMakeLists.txt  README.md  ble_reader_with_battery.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.claude/: settings.local.json
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
components/imu/: CMakeLists.txt  imu.c  imu.h
components/lsm6dsox_driver/: CMakeLists.txt
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
esp-idf/esp_bootloader_format/: cmake_install.cmake
esp-idf/esp_coex/: cmake_install.cmake
esp-idf/esp_common/: cmake_install.cmake
esp-idf/esp_driver_ana_cmpr/: cmake_install.cmake
esp-idf/esp_driver_bitscrambler/: cmake_install.cmake
esp-idf/esp_driver_cam/: cmake_install.cmake
esp-idf/esp_driver_dac/: cmake_install.cmake
esp-idf/esp_driver_gpio/: cmake_install.cmake
esp-idf/esp_driver_gptimer/: cmake_install.cmake
esp-idf/esp_driver_i2c/: cmake_install.cmake
esp-idf/esp_driver_i2s/: cmake_install.cmake
esp-idf/esp_driver_isp/: cmake_install.cmake
esp-idf/esp_driver_jpeg/: cmake_install.cmake
esp-idf/esp_driver_ledc/: cmake_install.cmake
esp-idf/esp_driver_mcpwm/: cmake_install.cmake
esp-idf/esp_driver_parlio/: cmake_install.cmake
esp-idf/esp_driver_pcnt/: cmake_install.cmake
esp-idf/esp_driver_ppa/: cmake_install.cmake
esp-idf/esp_driver_rmt/: cmake_install.cmake
esp-idf/esp_driver_sdio/: cmake_install.cmake
gdbinit/: gdbinit  symbols
main/: CMakeLists.txt  i2c_scanner.c  main.c
main/include/: battery.h  ble_common.h  common.h  dfu_service.h  gap.h  gatt_svc.h  sensor_task.h
main/src/: battery.c  dfu_service.c  gap.c  gatt_svc.c  i2c_shim.c  sensor_task.c
(+82 files in other folders)
